--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
-MONGO = "mongodb+srv://bharathraj7302:bharathraj7302@cluster0.wentptr.mongodb.net/?retryWrites=true&w=majority"
+MONGO = mongodb+srv://bharathraj7302:bharathraj7302@cluster0.wentptr.mongodb.net/?retryWrites=true&w=majority
+JWT_KEY = hcsuafjbnhvnabbjds
