--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.17",
     "infinite-react-carousel": "^1.2.11",
+    "pcln-slider": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-multi-range-sliders": "^0.1.6",
     "react-router-dom": "^6.14.0",
     "sass": "^1.63.6",
     "scss": "^0.2.4"
