--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -7,6 +7,8 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
+    "overrides": [
+    ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -15,5 +17,7 @@
         "react"
     ],
     "rules": {
+      "no-unused-vars": "warn",
+      "react/prop-types": "off"
     }
 }
