--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-multi-range-sliders": "^0.1.6",
+    "react-native-gallery-swiper": "^1.26.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.63.6",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
