--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.37.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^7.3.1",
     "stripe": "^12.10.0"
   },
