--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,14 @@
     "@stripe/stripe-js": "^1.54.1",
     "@tanstack/react-query": "^4.29.17",
     "infinite-react-carousel": "^1.2.11",
-    "pcln-slider": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-js-multi-range-sliders": "^0.1.6",
-    "react-native-gallery-swiper": "^1.26.4",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
     "sass": "^1.63.6",
     "scss": "^0.2.4",
-    "swiper": "^9.4.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
