--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,7 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.0.3",
     "stripe": "^12.10.0"
   },
   "devDependencies": {
