--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cloudinary": "^1.37.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
