--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,13 @@
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
     "@tanstack/react-query": "^4.29.17",
+    "axios": "^1.4.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "react-slick": "^0.29.0",
     "sass": "^1.63.6",
-    "scss": "^0.2.4",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^9.4.1"
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
