--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://BharathRaj73.github.io/Fiverr",
   "name": "fiver",
   "private": true,
   "version": "0.0.0",
@@ -8,11 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predploy":"npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^1.16.4",
@@ -35,8 +30,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "github": "^14.0.0",
-    "pages": "^0.0.16",
     "vite": "^4.0.0"
   }
 }
