--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.29.17",
     "axios": "^1.4.0",
+    "build": "^0.1.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
